--- a/youtube-vid/src/Components/Homepage.css
+++ b/youtube-vid/src/Components/Homepage.css
@@ -6,11 +6,15 @@
     display: flex;
 }
 .navbar1 {
-    width: 350px;
+    width: 400px;
     height: 35px;
     border-radius: 20px;
     display: flex;
     justify-content: space-between;
     border: 1px solid white;
     margin-left: 200px;
+}
+.navbar1 > div:nth-child(1) {
+    margin-left: 20px;
+    padding-left: 20px;
 }
