--- a/youtube-vid/src/Components/Homepage.css
+++ b/youtube-vid/src/Components/Homepage.css
@@ -3,18 +3,274 @@
     height: 130px;
     background-color: black;
     margin-left: 18%;
+}
+.navbarr {
     display: flex;
 }
 .navbar1 {
-    width: 400px;
-    height: 35px;
+    width: 600px;
+    height: 40px;
     border-radius: 20px;
     display: flex;
     justify-content: space-between;
-    border: 1px solid white;
-    margin-left: 200px;
+    border: 2px solid #222222;
+    margin-left: 180px;
+    margin-top: 10px;
 }
 .navbar1 > div:nth-child(1) {
+    padding-left: 10px;
+    margin-top: 8px;
+}
+.navbar1 > div:nth-child(1) > input {
+    background-color: black;
+    border: none;
+    font-size: 16px;
+    outline: none;
+}
+.navbar1 > div:nth-child(2) {
+    width: 60px;
+    height: 40px;
+    background-color: #222222;
+    border-radius: 0px 15px 15px 0px;
+}
+.navbar1 > div:nth-child(2) > i {
+    margin-top: 13px;
+}
+.navbar2 {
     margin-left: 20px;
-    padding-left: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #222222;
+    margin-top: 10px;
+}
+.navbar2 > i {
+    margin-top: 10px;
+}
+.navbar3 {
+    margin-left: 250px;
+    margin-top: 20px;
+    font-size: 14px;
+}
+.navbar4 {
+    margin-left: 20px;
+    margin-top: 20px;
+    font-size: 14px;
+}
+.navbar5 {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: blueviolet;
+    color: white;
+    margin-top: 15px;
+    margin-left: 15px;
+}
+.navbar5 > p {
+    margin-top: 3px;
+    font-size: 16px;
+}
+.navbar6 {
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-between;
+}
+.navbar6 > button:nth-child(1) {
+    width: 60px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    margin-left: 25px;
+    font-weight: bold;
+}
+.navbar6 > button:nth-child(2) {
+    width: 80px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    font-weight: bold;
+}
+.navbar6 > button:nth-child(3) {
+    width: 80px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    font-weight: bold;
+}
+.navbar6 > button:nth-child(4) {
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    font-weight: bold;
+}
+.navbar6 > button:nth-child(5) {
+    width: 80px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    font-weight: bold;
+}
+.navbar6 > button:nth-child(6) {
+    width: 130px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    font-weight: bold;
+}
+.navbar6 > button:nth-child(7) {
+    width: 120px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    font-weight: bold;
+}
+.navbar6 > button:nth-child(8) {
+    width: 60px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    font-weight: bold;
+}
+.navbar6 > button:nth-child(9) {
+    width: 60px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    font-weight: bold;
+}
+.navbar6 > button:nth-child(10) {
+    width: 170px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    font-weight: bold;
+}
+.navbar6 > button:nth-child(11) {
+    width: 90px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: #222222;
+    border: none;
+    font-weight: bold;
+}
+.leftside {
+    width: 100%;
+    height: 1000px;
+    background-color: black;
+}
+.sidebar {
+    width: 18%;
+    height: 500px;
+    background-color: black;
+    margin-top: -130px;
+}
+.sidebar1 {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+}
+.sidebar1 > div:nth-child(1) {
+    margin-left: 30px;
+}
+.sidebar1 > div:nth-child(2) {
+    margin-right: 30px;
+}
+.sidebar2 {
+    width: 80%;
+    margin: auto;
+    height: 40px;
+    background-color: #222222;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 10px;
+}
+.sidebar2 > div:nth-child(1) {
+    margin-left: 25px;
+    margin-top: 3px;
+    font-size: 20px;
+}
+.sidebar2 > div:nth-child(2) {
+    margin-right: 80px;
+    margin-top: -15px;
+    font-size: 20px;
+    color: white;
+}
+.sidebar3 {
+    width: 80%;
+    margin: auto;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.sidebar3 > div:nth-child(2) {
+    margin-right: 80px;
+    font-size: 20px;
+    color: white;
+    margin-top: -25px;
+}
+.sidebar4 {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+.sidebar4 > div:nth-child(2) {
+    margin-right: 30px;
+    font-size: 20px;
+    color: white;
+    margin-top: -25px;
+}
+.sidebar5 {
+    width: 90%;
+    margin: auto;
+    border: 1px solid gray;
+}
+.sidebar6 {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    margin-top: 20px;
+}
+.sidebar6 > div:nth-child(1) {
+    color: white;
+    font-size: 20px;
+    margin-left: 25px;
+}
+.sidebar6 > div:nth-child(2) {
+    margin-left: 10px;
+    margin-top: 4px;
 }
