--- a/youtube-vid/src/Components/Homepage.css
+++ b/youtube-vid/src/Components/Homepage.css
@@ -3,6 +3,9 @@
     height: 130px;
     background-color: black;
     margin-left: 18%;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 .navbarr {
     display: flex;
@@ -188,19 +191,28 @@
 }
 .leftside {
     width: 100%;
-    height: 1000px;
+    height: 2000px;
     background-color: black;
 }
 .sidebar {
     width: 18%;
-    height: 500px;
+    height: 700px;
     background-color: black;
     margin-top: -130px;
+    /* position: sticky;
+    left: 0;
+    top: 0;
+    scroll-behavior: auto; */
+    /* position: static; */
+    /* overflow: auto; */
 }
 .sidebar1 {
     display: flex;
     justify-content: space-between;
     padding-top: 20px;
+    /* position: sticky;
+    top: 0;
+    left: 0; */
 }
 .sidebar1 > div:nth-child(1) {
     margin-left: 30px;
@@ -247,6 +259,7 @@
     margin: auto;
     display: flex;
     justify-content: space-between;
+    margin-top: 5px;
 }
 .sidebar4 > div:nth-child(2) {
     margin-right: 30px;
@@ -273,4 +286,46 @@
 .sidebar6 > div:nth-child(2) {
     margin-left: 10px;
     margin-top: 4px;
+}
+.sidebar7 {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    margin-top: 20px;
+}
+.sidebar7 > div:nth-child(1){
+    margin-left: 25px;
+    width: 25px;
+    height: 25px;
+    border: 1px solid white;
+    border-radius: 5px;
+    font-size: 20px;
+}
+.sidebar7 > div:nth-child(2) {
+    margin-left: 30px;
+    font-size: 20px;
+    color: white;
+    margin-top: -22px;
+}
+.sidebar8 {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    margin-top: 5px;
+}
+.sidebar8 > div:nth-child(1){
+    margin-left: 25px;
+    font-size: 25px;
+}
+.sidebar8 > div:nth-child(2) {
+    margin-left: 30px;
+    font-size: 20px;
+    color: white;
+    margin-top: -22px;
+}
+.sidebar > h2 {
+    font-size: 22px;
+    color: white;
+    text-align: left;
+    margin-left: 50px;
 }
