--- a/youtube-vid/src/Components/Login.css
+++ b/youtube-vid/src/Components/Login.css
@@ -17,9 +17,9 @@
     /* border: 1px solid blue; */
 }
 .login2 > h2 {
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 500;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 .login2 > p:nth-child(1) {
     margin-top: -15px;
@@ -63,6 +63,9 @@
     margin-right: 140px;
     border: none;
     outline: none;
+}
+.login5 > input > placeholder:hover {
+    margin-top: 20px;
 }
 .login6 {
     text-align: left;
